# net2grid_first_task

./: CMakeLists.txt  ReadMe.md
inc/: linked_lists.h
src/: linked_list.c  main.c
test/: test_linked_list.c
